main.tf
provider "aws" {
    region = "eu-central-1"  
}

variable "vpc_cidr_blocks" {}

variable "subnet_cidr_block" {}

variable "avail_zone" {}

variable "env_prefix" {}

variable "myip" {}

variable "instance_type" {}

variable "public_key_location" {}

resource "aws_vpc" "myapp-vpc" {

  cidr_block = var.vpc_cidr_blocks
  tags = {
    Name: "${var.env_prefix}-vpc"
    
  }
  
}

resource "aws_subnet" "myapp-subnet-1" {

    vpc_id = aws_vpc.myapp-vpc.id
    cidr_block = var.subnet_cidr_block
    availability_zone = var.avail_zone
    tags = {
        Name: "${var.env_prefix}-subent-1"
    }
  
}

/*resource "aws_route_table" "myapp-route-table" {

    vpc_id = aws_vpc.myapp-vpc.id
    route {

        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.myapp-igw.id
    }
    tags = {
      Name: "${var.env_prefix}-rtb"
    }
  
}*/

resource "aws_default_route_table" "main-rtp" {

    default_route_table_id = aws_vpc.myapp-vpc.default_route_table_id
    route {

        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.myapp-igw.id
    }
    tags = {
      Name: "${var.env_prefix}-main-rtb"
    }
  
}

resource "aws_internet_gateway" "myapp-igw" {
    vpc_id = aws_vpc.myapp-vpc.id
    tags = {
      Name: "${var.env_prefix}-igw"
    }
}

/*resource "aws_route_table_association" "a-rtb-subnet" {

    subnet_id = aws_subnet.myapp-subnet-1.id
    route_table_id = aws_route_table.myapp-route-table.id
  
}*/

/*resource "aws_security_group" "myapp-sg" {

    name = "myapp-sg"
    vpc_id = aws_vpc.myapp-vpc.id

    ingress {                               #ingress - incoming
        from_port = 22 #port range from
        to_port = 22 #port range to
        protocol = "tcp"
        cidr_blocks = [var.myip] # from IP
    }

    ingress {
        from_port = 8080 #port range from
        to_port = 8080 #port range to
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"] # from IP
    }

    egress {                                #egress - out


        from_port = 0 #port range from any
            to_port = 0 #port range to any
            protocol = "-1"
            cidr_blocks = ["0.0.0.0/0"] # to any ip
            prefix_list_ids = []


    }

    tags = {
      Name: "${var.env_prefix}-sg" #"sg" securitygroup
    }

    
  
}*/
resource "aws_default_security_group" "default-sg" { #default security grooup

    
    vpc_id = aws_vpc.myapp-vpc.id

    ingress {                               #ingress - incoming
        from_port = 22 #port range from
        to_port = 22 #port range to
        protocol = "tcp"
        cidr_blocks = [var.myip] # from IP
    }

    ingress {
        from_port = 8080 #port range from
        to_port = 8080 #port range to
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"] # from IP
    }

    egress {                                #egress - out


        from_port = 0 #port range from any
            to_port = 0 #port range to any
            protocol = "-1"
            cidr_blocks = ["0.0.0.0/0"] # to any ip
            prefix_list_ids = []


    }

    tags = {
      Name: "${var.env_prefix}-default-sg" #"sg" securitygroup
    }

    
  
}

data "aws_ami" "lates-amazon-linux-image" {

    most_recent = true
    owners = ["amazon"]
    filter {
      name = "name"
      values = ["amzn2-ami-hvm-*-x86_64-gp2"]
    }
    filter {
      name = "virtualization-type"
      values = [ "hvm" ]

    }
  
}


output "aws_ami_id" {
  value = data.aws_ami.lates-amazon-linux-image.id
}

output "ec2_public_ip" {

    value = aws_instance.myapp-server.public_ip
  
}

resource "aws_key_pair" "ssh_key" {

    key_name = "server-key"
    public_key = file(var.public_key_location)

  
}

resource "aws_instance" "myapp-server" {

    ami =  data.aws_ami.lates-amazon-linux-image.id
    instance_type = var.instance_type

    subnet_id = aws_subnet.myapp-subnet-1.id
    vpc_security_group_ids = [ aws_default_security_group.default-sg.id ]
    availability_zone = var.avail_zone

    associate_public_ip_address = true
    key_name = aws_key_pair.ssh_key.key_name

    user_data = file("entry-script.sh")

    tags = {

        Name = "${var.env_prefix}-server"
    }

    

}
